--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,13 +7,17 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.8",
+    "bootstrap": "^5.3.3",
     "d3": "^7.8.5",
     "firebase": "^10.8.1",
     "i": "^0.3.7",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.2",
+    "react-burger-menu": "^3.0.9",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
+    "styled-components": "^6.1.8",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
