--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,10 +11,13 @@
     "d3": "^7.8.5",
     "firebase": "^10.8.1",
     "i": "^0.3.7",
+    "leaflet": "^1.9.4",
+    "leaflet.heat": "^0.2.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
     "react-burger-menu": "^3.0.9",
     "react-dom": "^18.2.0",
+    "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
     "styled-components": "^6.1.8",
